--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.563.0",
-    "next": "15.5.5",
+    "next": "^15.5.7",
     "next-mdx-remote": "^5.0.0",
     "openai": "^6.3.0",
     "papaparse": "^5.5.3",
